first commit into repository

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-insta-feed",
+  "name": "react-feed-insta",
   "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
